made listings and new listing, js need to make it look better

--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,9 @@
             </ul>
         </nav>
     </header>
-    
+    <div class="main-content">
+        
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
