--- a/details.html
+++ b/details.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-
+    <div class="main-content" style="margin-top: 80px;">
     <main class="container my-5">
         <div class="row">
             <div class="col-md-6">
@@ -50,7 +50,7 @@
             </div>
         </div>
     </main>
-
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
