--- a/feedback.html
+++ b/feedback.html
@@ -30,6 +30,7 @@
             </ul>
         </nav>
     </header>
+    <div class="main-content">
     <h2 style="padding-left: 2%; padding-top: 2%;">Event Feedback Form</h2>
     <div class="feedback-container">
         
@@ -84,8 +85,7 @@
 
         </form>
     </div>
-    
-
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
