--- a/listings.html
+++ b/listings.html
@@ -24,8 +24,24 @@
             </ul>
         </nav>
     </header>
-    
-
+    <div class="main-content">
+    <div style="margin-top: 80px;">
+        <h1 style="padding-left: 4%; padding-top: 1%;">Your Listings</h1>
+        <hr style="border: none;
+        border-radius: 30px;
+        height: 4px;
+        background-color: black;
+        margin-left: 4%;
+        width: 92%;">
+        <div style="padding-left: 4%; padding-top: 10px;">
+            <a href="new-listing.html" class="btn btn-primary">Make New Listing</a>
+        </div>
+        <div class="row" id="listingsContainer">
+            <!-- Listings added by the user will be displayed here dynamically -->
+        </div>    
+        
+    </div>
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
