--- a/new-listing.html
+++ b/new-listing.html
@@ -24,6 +24,7 @@
             </ul>
         </nav>
     </header>
+    <div class="main-content">
     <div style="margin-top: 80px;">
         <h1 style="padding-left: 4%; padding-top: 1%;">New Listing</h1>
         <hr style="border: none;
@@ -61,7 +62,7 @@
         </div>        
         
     </div>
-
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
