--- a/sign-up.html
+++ b/sign-up.html
@@ -24,9 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="su-bg">
-
-    </div>
+    <div class="main-content">
     <div class="su-bg">
         <video autoplay loop muted playsinline>
             <source src="./images/sign-up-bg.mp4" type="video/mp4">
@@ -56,6 +54,7 @@
                 </div>
             </form>
         </div>
+    </div>
     </div>
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
