--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </ul>
         </nav>
     </header>
+    <div class="main-content">
     <!-- Ads Section  -->
     <div class="ads">
         <div class="adcontainer">
@@ -45,7 +46,7 @@
     <!-- Featured Items Section -->
     <section class="container mt-5">
         <h2 class="mb-4"><b>Featured Items</b></h2>
-        <div class="row">
+        <div class="row" id="featuredItemsContainer">
             <div class="col-md-3" style="padding-bottom: 2%;">
                 <div class="card">
                     <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
@@ -380,7 +381,7 @@
             </div>
         </div>
     </section>
-    
+    </div>
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
