updated the padding for listings page

--- a/listings.html
+++ b/listings.html
@@ -33,10 +33,10 @@
         background-color: black;
         margin-left: 4%;
         width: 92%;">
-        <div style="padding-left: 4%; padding-top: 10px;">
+        <div style="padding-left: 4%; padding-top: 10px; padding-bottom: 10px;">
             <a href="new-listing.html" class="btn btn-primary">Make New Listing</a>
         </div>
-        <div class="row" id="listingsContainer">
+        <div class="row" id="listingsContainer" style="padding-left: 4%; padding-right: 4%;">
             <!-- Listings added by the user will be displayed here dynamically -->
         </div>    
         
