added $ to the listing products when viewed in details page

--- a/details.html
+++ b/details.html
@@ -35,7 +35,7 @@
             <div class="col-md-6">
                 <div class="product-info p-4">
                     <h1 id="product-name"></h1>
-                    <p id="product-price" class="h3 text-primary"></p>
+                    <p id="product-price" class="h3 text-primary">$</p>
                     <div class="product-description mb-4">
                         <h4>Product Description</h4>
                         <p id="product-description"></p>
