updated some margins

--- a/feedback.html
+++ b/feedback.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    <div class="main-content">
+    <div class="main-content" style="margin-top: 80px;">
     <h2 style="padding-left: 2%; padding-top: 2%;">Event Feedback Form</h2>
     <div class="feedback-container">
         
