--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="main-content">
+    <div class="main-content" style="margin-top: 80px;">
     <div class="su-bg">
         <video autoplay loop muted playsinline>
             <source src="./images/sign-up-bg.mp4" type="video/mp4">
@@ -64,5 +64,6 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
