--- a/cart.html
+++ b/cart.html
@@ -35,9 +35,17 @@
                 <!-- Cart items will be dynamically added here by JavaScript -->
             </div>
 
-            <!-- Checkout Button (Hidden Initially) -->
-            <div class="text-center mt-4" id="checkoutButtonContainer" style="display: none;">
-                <button class="btn btn-success btn-lg" id="checkoutButton">Proceed to Checkout</button>
+            <!-- Checkout Section -->
+            <div class="row mt-4 align-items-center">
+                <!-- Left: Checkout Button -->
+                <div class="col-md-6 text-start" id="checkoutButtonContainer" style="display: none;">
+                    <button class="btn btn-success btn-lg" id="checkoutButton">Proceed to Checkout</button>
+                </div>
+
+                <!-- Right: Total Amount -->
+                <div class="col-md-6 text-end">
+                    <h5>Total: <span id="totalAmount" class="text-primary">$0.00</span></h5>
+                </div>
             </div>
         </div>
     </div>
