--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,33 @@
         </nav>
     </header>
     <div class="main-content" style="margin-top: 80px;">
+        <div class="main-content" style="margin-top: 80px;">
+            <div class="container-fluid">
+                <div class="row">
+                    <!-- Left Sidebar (Chat List) -->
+                    <div class="col-md-4 chat-list p-3">
+                        <h4>Chats</h4>
+                        <ul id="chatList" class="list-group">
+                            <!-- Chats will be added dynamically -->
+                        </ul>
+                    </div>
         
+                    <!-- Right Side (Chat Window) -->
+                    <div class="col-md-8 chat-window p-3">
+                        <h4 id="chatHeader">Select a Chat</h4>
+                        <div id="chatMessages" class="chat-messages">
+                            <!-- Messages will be displayed here -->
+                        </div>
+        
+                        <!-- Message Input -->
+                        <div class="chat-input mt-3">
+                            <input type="text" id="messageInput" class="form-control" placeholder="Type a message...">
+                            <button class="btn btn-primary mt-2" onclick="sendMessage()">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Footer -->
