--- a/checkout.html
+++ b/checkout.html
@@ -30,9 +30,7 @@
             </ul>
         </nav>
     </header>
-    <div class="main-content" style="margin-top: 80px;">
-        hi
-    </div>
+    
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
@@ -41,5 +39,6 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
