sign up and sign in base

--- a/sign-in.html
+++ b/sign-in.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <div class="main-content" style="margin-top: 30px;">
+    <div class="main-content" style="margin-top: 60px;">
     <div class="su-bg">
         <video autoplay loop muted playsinline>
             <source src="./images/sign-up-bg.mp4" type="video/mp4">
@@ -34,17 +34,12 @@
     </div>
     <div class="cont">
         <div class="form-container">
-            <h3 class="signin">Sign Up</h3>
+            <h3 class="signin">Sign In</h3>
             <form>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputUsername1" class="form-label">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Enter Your Username Here.</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -55,10 +50,10 @@
                     <label class="form-check-label" for="exampleCheck1">Stay Signed In</label>
                 </div>
                 <div>
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                    <button type="submit" class="btn btn-primary">Sign In</button>
                 </div>
                 <div class="mt-3">
-                    <span style="padding-left: 2%;">Already have an account? <a href="sign-in.html" style="padding-left: 20%;">Sign In</a></span>
+                    <span style="padding-left: 2%;">Don't have an account? <a href="sign-up.html" style="padding-left: 20%;">Sign Up</a></span>
                 </div>
             </form>
         </div>
