javascript for sign in and sign up

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </nav>
     </header>
     <div class="main-content">
+        <p id="welcomeUser"></p>
     <!-- Ads Section  -->
     <div class="ads">
         <div class="adcontainer">
