--- a/sign-in.html
+++ b/sign-in.html
@@ -35,7 +35,7 @@
     <div class="cont">
         <div class="form-container">
             <h3 class="signin">Sign In</h3>
-            <form>
+            <form id="signInForm" action="index.html" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
