--- a/sign-up.html
+++ b/sign-up.html
@@ -35,7 +35,7 @@
     <div class="cont">
         <div class="form-container">
             <h3 class="signin">Sign Up</h3>
-            <form>
+            <form id="signUpForm" action="index.html" method="post">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -43,8 +43,8 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputUsername1" class="form-label">Username</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">Enter Your Username Here.</div>
+                    <input type="text" class="form-control" id="exampleInputUsername1" aria-describedby="user">
+                    <div id="user" class="form-text">Enter Your Username Here.</div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
