--- a/feedback.html
+++ b/feedback.html
@@ -26,6 +26,7 @@
                 <li><a href="listings.html">Listings</a></li>
                 <li><a href="sign-in.html">Sign In</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="chat.html">Chat</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
             </ul>
         </nav>
