--- a/index.html
+++ b/index.html
@@ -293,18 +293,18 @@
         </div>
     </section>
 
-    <!-- Categories Section -->
-    <div>
+    <!-- Carousel Section -->
+    <div class="carousel-container">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner" style="background-color: rgb(255, 255, 255);">
+            <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./images/mahjong-keeb.jpg" class="d-block w-100" alt="...">
+                    <img src="./images/mahjong-keeb.jpg" class="carousel-image" alt="Mahjong Keyboard">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="carousel-image" alt="Nike Airmax LTD 3 Red">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="d-block w-100" alt="...">
+                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="carousel-image" alt="Mahjong Tiles">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -317,6 +317,7 @@
             </button>
         </div>
     </div>
+    
 
     <section class="py-4">
         <div class="container-lg">
