--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
                         <label class="form-label">Select Payment Method:</label>
                         <select class="form-select" id="payment-method">
                             <option value="credit-card">Credit Card</option>
-                            <option value="paypal">PayPal</option>
+                            <option value="paynow">Paynow</option>
                             <option value="cash-on-delivery">Cash on Delivery</option>
                         </select>
                     </div>
