--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
                     <img src="./images/mahjong-keeb.jpg" class="carousel-image" alt="Mahjong Keyboard">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="carousel-image" alt="Nike Airmax LTD 3 Red">
+                    <img src="./images/nike-airmax-ltd-3-red.png" class="carousel-image" alt="Nike Airmax LTD 3 Red">
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="carousel-image" alt="Mahjong Tiles">
+                    <img src="./images/winnie-the-pooh-mahjong-tiles.png" class="carousel-image" alt="Mahjong Tiles">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
