--- a/index.html
+++ b/index.html
@@ -50,244 +50,7 @@
         <h2 class="mb-4"><b>Featured Items</b></h2>
         <div class="row" id="featuredItemsContainer">
             <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Headphones</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Mahjong Keeb</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Expensive mic</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Logitech Mouse</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Headphones</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Mahjong Keeb</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Expensive mic</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Logitech Mouse</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Headphones</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Mahjong Keeb</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Expensive mic</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Logitech Mouse</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Headphones</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Mahjong Keeb</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Expensive mic</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Logitech Mouse</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3" style="padding-bottom: 2%;">
-                <div class="card">
-                    <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
-                        <p class="card-text">$100</p>
-                        <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
-                    </div>
-                </div>
+                
             </div>
             <!-- Repeat for more items -->
         </div>
@@ -395,5 +158,69 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
+
+<!-- 
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/black-headphones.jpg" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Headphones</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Headphones" data-price="$100" data-image="./images/black-headphones.jpg" data-description="Sony XM5.">View Details</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/mahjong-keeb.jpg" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Mahjong Keeb</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Mahjong Keeb" data-price="$100" data-image="./images/mahjong-keeb.jpg" data-description="Keyboard cos imagine not having one.">View Details</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/mic.jpg" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Expensive mic</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Expensive mic" data-price="$100" data-image="./images/mic.jpg" data-description="mikes phone.">View Details</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/wireless-mouse.jpg" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Logitech Mouse</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Logitech Mouse" data-price="$100" data-image="./images/wireless-mouse.jpg" data-description="Logitech g503.">View Details</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/nike-airmax-ltd-3-red.jpeg" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Nike Airmax LTD 3 Red</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Nike Airmax LTD 3 Red" data-price="$100" data-image="./images/nike-airmax-ltd-3-red.jpeg" data-description="Shoes.">View Details</a>
+        </div>
+    </div>
+</div>
+<div class="col-md-3" style="padding-bottom: 2%;">
+    <div class="card">
+        <img src="./images/winnie-the-pooh-mahjong-tiles.webp" class="card-img-top" alt="Item 1">
+        <div class="card-body">
+            <h5 class="card-title">Winnie the Pooh Mahjong tiles</h5>
+            <p class="card-text">$100</p>
+            <a href="details.html" class="btn btn-primary view-details" data-name="Winnie the Pooh Mahjong tiles" data-price="$100" data-image="./images/winnie-the-pooh-mahjong-tiles.webp" data-description="Mahjong addicts dream.">View Details</a>
+        </div>
+    </div>
+</div> -->
+
