pushall just to save

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <li><a href="feedback.html">Feedback</a></li>
                 <li><a href="chat.html">Chat</a></li>
                 <li><a href="cart.html">Cart (<span id="cart-count">0</span>)</a></li>
+                <button id="clearButton">Clear Local Storage</button>
+
             </ul>
         </nav>
     </header>
@@ -161,6 +163,8 @@
     <script src="api.js"></script>
 </body>
 </html>
+
+
 
 <!-- 
 <div class="col-md-3" style="padding-bottom: 2%;">
