--- a/details.html
+++ b/details.html
@@ -41,7 +41,7 @@
                         <h4>Product Description</h4>
                         <p id="product-description"></p>
                     </div>
-                    <button class="btn btn-primary btn-lg mb-3 w-100">Add to Cart</button>
+                    <button class="btn btn-primary btn-lg mb-3 w-100" id="addtocartbutton">Add to Cart</button>
                     <div class="product-meta">
                         <p><strong>Availability:</strong> In Stock</p>
                         <p><strong>Category:</strong> dk</p>
@@ -61,5 +61,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
