--- a/checkout.html
+++ b/checkout.html
@@ -48,7 +48,7 @@
                     <!-- Buttons aligned at the bottom -->
                     <div class="d-flex justify-content-between mt-4">
                         <button type="button" class="btn btn-secondary btn-sm" onclick="goHome()">Back to Home</button>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="confirmCheckout()">Confirm Checkout</button>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="">Confirm Checkout</button>
                     </div>
                 </form>
             </div>
@@ -63,5 +63,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="api.js"></script>
+
 </body>
 </html>
