--- a/checkout.html
+++ b/checkout.html
@@ -54,6 +54,13 @@
             </div>
         </div>
     </div>  
+    <!-- Lottie Animation (Initially Hidden) -->
+    <div class="text-center" id="success-animation-container" style="display: none; margin-top: 50px;">
+        <div id="lottie-animation" style="width: 250px; height: 250px; margin: auto;"></div>
+        <h3 class="mt-3">Order Confirmed!</h3>
+    </div>
+
+
     <!-- Footer -->
     <footer class="bg-dark text-center text-lg-start mt-5">
         <div class="container p-4">
@@ -62,6 +69,7 @@
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
