--- a/feedback.html
+++ b/feedback.html
@@ -49,7 +49,7 @@
 
             <!-- Image -->
             <div class="form-group">
-                <label for="upload-image"><span>3.</span> Image of the product.</label>
+                <label for="upload-image"><span>3.</span> Relevant images.</label>
                 <div class="upload-image">
                     <label for="imageUpload">Upload an Image:</label>
                     <input type="file" id="imageUpload" name="image" accept="image/*">
