--- a/feedback.html
+++ b/feedback.html
@@ -44,7 +44,7 @@
             <!-- Actual Feedback -->
             <div class="form-group">
                 <label for="feedback"><span>2.</span> Feedback</label>
-                <input type="text" id="feedback" placeholder="Enter your feedback here">
+                <textarea id="feedback" placeholder="Enter your feedback here" rows="6"></textarea>
             </div>
 
             <!-- Image -->
