feedback form linked to api

--- a/feedback.html
+++ b/feedback.html
@@ -34,7 +34,7 @@
     <h2 style="padding-left: 2%; padding-top: 2%;">Event Feedback Form</h2>
     <div class="feedback-container">
         
-        <form>
+        <form id="feedback-form">
             <!-- Name of Seller -->
             <div class="form-group">
                 <label for="Seller-name"><span>1.</span> Name of Seller</label>
